# lifelog

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
foodlog/: admin.py  apps.py  middleware.py  models.py
foodlog/migrations/: 0001_initial.py  0002_pill_alter_product_options_takingpill.py  0003_takingpill_note.py  0004_note.py  0005_product_lactose.py  0006_rename_lactose_product_lactose_free.py  0007_alter_product_lactose_free.py  0008_alter_product_lactose_free.py
foodlog/static/foodlog/css/: custom_admin.css
foodlog/templates/admin/: base_site.html
foodlog/templates/admin/foodlog/day/: change_form.html
project/: settings.py
