[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Aleksei Sharypov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
